--- a/Example/XeeSDK/Base.lproj/Main.storyboard
+++ b/Example/XeeSDK/Base.lproj/Main.storyboard
@@ -1,25 +1,161 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Mqw-ey-jDv">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="ufC-wZ-h7g">
+        <!--Xee View Controller-->
+        <scene sceneID="F6A-F4-jN2">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Mqw-ey-jDv" customClass="XeeViewController" customModule="XeeSDK_Example" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
+                        <viewControllerLayoutGuide type="top" id="4QC-mS-cM3"/>
+                        <viewControllerLayoutGuide type="bottom" id="Imf-f4-pie"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    <view key="view" contentMode="scaleToFill" id="vdi-5O-dBU">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="fdfsd fusdfdsfjdfsdkfskdfk sd fk dskf" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="yyT-ZE-I7v">
+                                <rect key="frame" x="87" y="20" width="288" height="647"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Car id:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aVH-uj-sC2">
+                                <rect key="frame" x="0.0" y="20" width="87" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="YPQ-xM-3H5"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QF6-TQ-9SV">
+                                <rect key="frame" x="0.0" y="40" width="87" height="30"/>
+                                <color key="backgroundColor" red="0.66666666669999997" green="0.66666666669999997" blue="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="b1i-Jt-MCq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <state key="normal" title="Edit">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trip id:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yPE-cA-rz7">
+                                <rect key="frame" x="0.0" y="70" width="87" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="Sk1-i6-frc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5fu-06-Wc8">
+                                <rect key="frame" x="0.0" y="90" width="87" height="30"/>
+                                <color key="backgroundColor" red="0.66666666669999997" green="0.66666666669999997" blue="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="FKL-Ir-ocs"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <state key="normal" title="Edit">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Device id:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QpO-qI-HlZ">
+                                <rect key="frame" x="0.0" y="120" width="87" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="AUO-0i-4El"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jA2-Jv-4yB">
+                                <rect key="frame" x="0.0" y="140" width="87" height="30"/>
+                                <color key="backgroundColor" red="0.66666666669999997" green="0.66666666669999997" blue="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="lnC-Yi-rNO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <state key="normal" title="Edit">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hff-OZ-aGn">
+                                <rect key="frame" x="0.0" y="170" width="87" height="497"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="87" id="pcR-hL-e5e"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="basicCell" textLabel="lFy-51-XlL" style="IBUITableViewCellStyleDefault" id="iKf-3E-JW9" customClass="Cell">
+                                        <rect key="frame" x="0.0" y="28" width="87" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="iKf-3E-JW9" id="2T2-js-CB7">
+                                            <rect key="frame" x="0.0" y="0.0" width="87" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="lFy-51-XlL">
+                                                    <rect key="frame" x="15" y="0.0" width="57" height="44"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Mqw-ey-jDv" id="pvt-CO-Dcg"/>
+                                    <outlet property="delegate" destination="Mqw-ey-jDv" id="aQb-bO-BcV"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.92596531410000005" green="0.92596531410000005" blue="0.92596531410000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="yPE-cA-rz7" firstAttribute="top" secondItem="QF6-TQ-9SV" secondAttribute="bottom" id="19B-rY-Hhu"/>
+                            <constraint firstItem="5fu-06-Wc8" firstAttribute="leading" secondItem="vdi-5O-dBU" secondAttribute="leading" id="G0C-ld-yaF"/>
+                            <constraint firstItem="yyT-ZE-I7v" firstAttribute="top" secondItem="4QC-mS-cM3" secondAttribute="bottom" id="Grv-8H-qng"/>
+                            <constraint firstItem="hff-OZ-aGn" firstAttribute="top" secondItem="jA2-Jv-4yB" secondAttribute="bottom" id="L4N-YP-QTe"/>
+                            <constraint firstItem="jA2-Jv-4yB" firstAttribute="top" secondItem="QpO-qI-HlZ" secondAttribute="bottom" id="Lzp-2Z-5en"/>
+                            <constraint firstItem="yyT-ZE-I7v" firstAttribute="leading" secondItem="jA2-Jv-4yB" secondAttribute="trailing" id="Ojj-Zh-5yP"/>
+                            <constraint firstItem="5fu-06-Wc8" firstAttribute="top" secondItem="yPE-cA-rz7" secondAttribute="bottom" id="Uam-k3-HOq"/>
+                            <constraint firstItem="QpO-qI-HlZ" firstAttribute="leading" secondItem="vdi-5O-dBU" secondAttribute="leading" id="Vdx-6R-mda"/>
+                            <constraint firstItem="Imf-f4-pie" firstAttribute="top" secondItem="yyT-ZE-I7v" secondAttribute="bottom" id="XfK-WF-M9C"/>
+                            <constraint firstItem="aVH-uj-sC2" firstAttribute="top" secondItem="4QC-mS-cM3" secondAttribute="bottom" id="YA7-xY-6PI"/>
+                            <constraint firstItem="QpO-qI-HlZ" firstAttribute="top" secondItem="5fu-06-Wc8" secondAttribute="bottom" id="dGP-km-lwz"/>
+                            <constraint firstItem="yyT-ZE-I7v" firstAttribute="leading" secondItem="QF6-TQ-9SV" secondAttribute="trailing" id="eHg-GV-hYR"/>
+                            <constraint firstItem="yyT-ZE-I7v" firstAttribute="leading" secondItem="QpO-qI-HlZ" secondAttribute="trailing" id="eoc-zs-xc3"/>
+                            <constraint firstItem="yyT-ZE-I7v" firstAttribute="leading" secondItem="aVH-uj-sC2" secondAttribute="trailing" id="ew2-Py-DXJ"/>
+                            <constraint firstItem="yyT-ZE-I7v" firstAttribute="leading" secondItem="yPE-cA-rz7" secondAttribute="trailing" id="giV-xR-XDd"/>
+                            <constraint firstItem="Imf-f4-pie" firstAttribute="top" secondItem="hff-OZ-aGn" secondAttribute="bottom" id="hIo-AT-36k"/>
+                            <constraint firstItem="QF6-TQ-9SV" firstAttribute="top" secondItem="aVH-uj-sC2" secondAttribute="bottom" id="k2Y-U5-GBb"/>
+                            <constraint firstItem="yyT-ZE-I7v" firstAttribute="leading" secondItem="5fu-06-Wc8" secondAttribute="trailing" id="lN1-sX-rnx"/>
+                            <constraint firstItem="yyT-ZE-I7v" firstAttribute="leading" secondItem="vdi-5O-dBU" secondAttribute="leading" constant="87" id="lo2-fI-Ybp"/>
+                            <constraint firstItem="aVH-uj-sC2" firstAttribute="leading" secondItem="vdi-5O-dBU" secondAttribute="leading" id="nNc-ho-knV"/>
+                            <constraint firstAttribute="trailing" secondItem="yyT-ZE-I7v" secondAttribute="trailing" id="o1i-jA-DYr"/>
+                            <constraint firstItem="QF6-TQ-9SV" firstAttribute="leading" secondItem="vdi-5O-dBU" secondAttribute="leading" id="rB7-bc-g7r"/>
+                            <constraint firstItem="hff-OZ-aGn" firstAttribute="leading" secondItem="vdi-5O-dBU" secondAttribute="leading" id="t24-Ut-ARt"/>
+                            <constraint firstItem="jA2-Jv-4yB" firstAttribute="leading" secondItem="vdi-5O-dBU" secondAttribute="leading" id="uw0-K3-DDE"/>
+                            <constraint firstItem="yPE-cA-rz7" firstAttribute="leading" secondItem="vdi-5O-dBU" secondAttribute="leading" id="zzU-Fs-Gf3"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="textView" destination="yyT-ZE-I7v" id="6w2-RG-KjX"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rlk-x6-YyH" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="73" y="65"/>
         </scene>
     </scenes>
 </document>
