--- a/Example/XeeSDK/Base.lproj/Main.storyboard
+++ b/Example/XeeSDK/Base.lproj/Main.storyboard
@@ -5,7 +5,7 @@
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -107,7 +107,7 @@
                                     <constraint firstAttribute="width" constant="87" id="pcR-hL-e5e"/>
                                 </constraints>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="basicCell" textLabel="lFy-51-XlL" style="IBUITableViewCellStyleDefault" id="iKf-3E-JW9" customClass="Cell">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="basicCell" textLabel="lFy-51-XlL" style="IBUITableViewCellStyleDefault" id="iKf-3E-JW9">
                                         <rect key="frame" x="0.0" y="28" width="87" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="iKf-3E-JW9" id="2T2-js-CB7">
@@ -158,6 +158,7 @@
                         </subviews>
                         <color key="backgroundColor" red="0.92596531410000005" green="0.92596531410000005" blue="0.92596531410000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="qQg-OC-f4S" firstAttribute="top" secondItem="4QC-mS-cM3" secondAttribute="bottom" id="1YB-R9-2gN"/>
                             <constraint firstItem="yyT-ZE-I7v" firstAttribute="top" secondItem="QpO-qI-HlZ" secondAttribute="bottom" id="3dr-Nc-B4R"/>
                             <constraint firstItem="QF6-TQ-9SV" firstAttribute="leading" secondItem="aVH-uj-sC2" secondAttribute="trailing" id="3sG-jj-lc5"/>
                             <constraint firstItem="hff-OZ-aGn" firstAttribute="top" secondItem="QpO-qI-HlZ" secondAttribute="bottom" id="94J-Zz-i7h"/>
@@ -166,20 +167,19 @@
                             <constraint firstAttribute="trailing" secondItem="jA2-Jv-4yB" secondAttribute="trailing" id="K3l-7D-hEk"/>
                             <constraint firstItem="5fu-06-Wc8" firstAttribute="top" secondItem="QF6-TQ-9SV" secondAttribute="bottom" id="PNL-OA-END"/>
                             <constraint firstItem="QpO-qI-HlZ" firstAttribute="leading" secondItem="vdi-5O-dBU" secondAttribute="leading" id="Vdx-6R-mda"/>
-                            <constraint firstItem="Imf-f4-pie" firstAttribute="top" secondItem="yyT-ZE-I7v" secondAttribute="bottom" id="XfK-WF-M9C"/>
                             <constraint firstItem="OH1-jQ-HzB" firstAttribute="leading" secondItem="vdi-5O-dBU" secondAttribute="leading" id="YLi-oT-qOF"/>
                             <constraint firstAttribute="trailing" secondItem="5fu-06-Wc8" secondAttribute="trailing" id="ZIv-6e-QHA"/>
                             <constraint firstAttribute="trailing" secondItem="QF6-TQ-9SV" secondAttribute="trailing" id="aPr-14-D01"/>
+                            <constraint firstItem="OH1-jQ-HzB" firstAttribute="top" secondItem="4QC-mS-cM3" secondAttribute="bottom" id="ayt-99-voZ"/>
                             <constraint firstItem="aVH-uj-sC2" firstAttribute="top" secondItem="OH1-jQ-HzB" secondAttribute="bottom" id="dAP-e1-P5j"/>
-                            <constraint firstItem="qQg-OC-f4S" firstAttribute="top" secondItem="4QC-mS-cM3" secondAttribute="bottom" id="dZk-ag-qJa"/>
-                            <constraint firstItem="Imf-f4-pie" firstAttribute="top" secondItem="hff-OZ-aGn" secondAttribute="bottom" id="hIo-AT-36k"/>
+                            <constraint firstItem="Imf-f4-pie" firstAttribute="top" secondItem="hff-OZ-aGn" secondAttribute="bottom" id="iJD-6e-DqY"/>
                             <constraint firstItem="QpO-qI-HlZ" firstAttribute="top" secondItem="yPE-cA-rz7" secondAttribute="bottom" id="igr-XP-wLh"/>
                             <constraint firstItem="yyT-ZE-I7v" firstAttribute="leading" secondItem="vdi-5O-dBU" secondAttribute="leading" constant="87" id="lo2-fI-Ybp"/>
                             <constraint firstItem="5fu-06-Wc8" firstAttribute="leading" secondItem="yPE-cA-rz7" secondAttribute="trailing" id="mVs-2s-u2L"/>
                             <constraint firstItem="aVH-uj-sC2" firstAttribute="leading" secondItem="vdi-5O-dBU" secondAttribute="leading" id="nNc-ho-knV"/>
                             <constraint firstAttribute="trailing" secondItem="yyT-ZE-I7v" secondAttribute="trailing" id="o1i-jA-DYr"/>
+                            <constraint firstItem="Imf-f4-pie" firstAttribute="top" secondItem="yyT-ZE-I7v" secondAttribute="bottom" id="oeR-We-sLZ"/>
                             <constraint firstItem="jA2-Jv-4yB" firstAttribute="top" secondItem="5fu-06-Wc8" secondAttribute="bottom" id="ptz-IH-QGf"/>
-                            <constraint firstItem="OH1-jQ-HzB" firstAttribute="top" secondItem="4QC-mS-cM3" secondAttribute="bottom" id="s7H-RG-kzr"/>
                             <constraint firstItem="qQg-OC-f4S" firstAttribute="leading" secondItem="OH1-jQ-HzB" secondAttribute="trailing" id="sCK-lK-ny1"/>
                             <constraint firstItem="hff-OZ-aGn" firstAttribute="leading" secondItem="vdi-5O-dBU" secondAttribute="leading" id="t24-Ut-ARt"/>
                             <constraint firstItem="QF6-TQ-9SV" firstAttribute="top" secondItem="qQg-OC-f4S" secondAttribute="bottom" id="tsb-D1-Dbs"/>
